--- a/notebooks/03_insights_and_recommendations.ipynb
+++ b/notebooks/03_insights_and_recommendations.ipynb
@@ -1,9 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "75429b96-2abb-43ac-ac47-4725d8394f7e",
+   "metadata": {},
+   "source": [
+    "### Key Insights\n",
+    "- Service duration is highly right-skewed, with a small percentage of encounters\n",
+    "  consuming disproportionate time.\n",
+    "- Clear peak demand hours are observed, indicating temporal congestion patterns.\n",
+    "- Variability in service duration suggests inconsistent operational processes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c134cf1-3b54-405b-a483-db8a63553b36",
+   "metadata": {},
+   "source": [
+    "### Recommendations\n",
+    "- Align staffing levels with identified peak hours to reduce congestion.\n",
+    "- Standardize workflows for high-variability services to reduce delays.\n",
+    "- Track service duration KPIs continuously to detect emerging bottlenecks.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bde5048c-8193-499b-9c28-fb9381341ee3",
+   "metadata": {},
+   "source": [
+    "### Limitations\n",
+    "This analysis is based on synthetic or simplified healthcare data and may not\n",
+    "capture the full complexity of real-world hospital operations.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75429b96-2abb-43ac-ac47-4725d8394f7e",
+   "id": "f93e8121-ea31-4563-939f-f8a72b90a189",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,11 +44,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
